--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -148,6 +148,8 @@
     .teacher-item .btn{display:inline-block;background-color:#292a2e;color:#fff;height:43px;border-radius:22px;padding:10px 28px;font-size:16px}
     .teacher-item .btn-area{width:100%;position:absolute;bottom:0;left:0;padding:10px 0 20px;text-align:center}
     .ico-matching{display:block;width:33px;height:33px;background: url(../../resources/images/common/ico-matching.png) no-repeat 0 0 / cover;position:absolute;top:0;right:20px}
+    .ico-flag {width:40px;height:40px;background-size:cover;right:20px}
+    .ico-flag .txt-flag {font-size:14px;padding-top:5px}
 
     .teacher-list .slick-prev{width:34px;height:34px;background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0 / cover;left:-20px;position: absolute;top:50%;z-index: 2}
     .teacher-list .slick-next{width:34px;height:34px;background: url(../../resources/images/common/arrow-swiper.png) no-repeat 0 0 /cover;transform: rotate(180deg);right:-20px;position: absolute;top:50%;z-index: 2}
